<resources>
    <string name="app_name">sample-app</string>

    <string name="func_description_tv">1、用手机自带的录音软件录制1分钟以内的音频\n2、点击[选择音频文件]按钮，选择刚才完成的录音文件\n3、处理完成后，点击按钮播放原音频、处理后音频，对比效果</string>
    <string name="pick_audio_tv">选择音频文件</string>
    <string name="cancel_process_tv">取消处理任务</string>
    <string name="play_origin_audio">播放原始音频</string>
    <string name="play_processed_audio">播放处理后的音频</string>
    <string name="goto_history">查看处理历史</string>

    <string name="start_process_tv">一键智能处理</string>

</resources>