<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/func_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/func_description_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
        android:id="@+id/spinner_preset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/func_description"/>

    <Button
        android:id="@+id/btn_pick_audio"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/pick_audio_tv"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_preset"/>

    <ProgressBar
        android:id="@+id/process_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_pick_audio"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    <TextView
        android:id="@+id/process_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_process_tv"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_bar"/>

    <Button
        android:id="@+id/btn_cancel_process"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/cancel_process_tv"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_message"/>

    <LinearLayout
        android:id="@+id/layout_audio_compare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btn_cancel_process"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_play_origin_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/play_origin_audio"/>

        <Button
            android:id="@+id/btn_play_processed_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/play_processed_audio"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_goto_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_history"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_audio_compare"/>

</androidx.constraintlayout.widget.ConstraintLayout>